style: Fix svg divider gap

--- a/src/sass/_projects.scss
+++ b/src/sass/_projects.scss
@@ -1,14 +1,47 @@
 .projects {
   background-color: #d0d2d6;
+  /* svg margin fix */
+  .svg-divider-top,
+  .svg-divider-bottom {
+    height: 20rem;
+    width: 100%;
+    position: relative;
+    &::before,
+    &::after {
+      content: '';
+      position: absolute;
+      width: 100%;
+      height: 4px;
+      z-index: 10;
+    }
+    &::before {
+      top: -2px;
+      background-color: #242dc7;
+    }
+    &::after {
+      bottom: -2px;
+      background-color: #d0d2d6;
+    }
+  }
+  .svg-divider-bottom {
+    &::before {
+      background-color: #d0d2d6;
+    }
+    &::after {
+      background-color: #242dc7;
+    }
+  }
+  /* svg margin fix */
   &__shape-divider-top,
   &__shape-divider-bottom {
     display: block;
     width: 100%;
-    height: 20rem;
+    height: 100%;
     background-color: #242dc7;
   }
   &__shape-divider-bottom {
     transform: rotate(180deg);
+    height: 100%;
   }
   &__content {
     display: flex;
